# personal-dicom-viewer

./: .gitignore  README.md
app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: Button.tsx  Card.tsx  index.ts
app/src/features/metadata-inspector/: MetadataInspector.tsx  index.ts
app/src/features/study-browser/: SeriesItem.tsx  StudyBrowser.tsx  StudyCard.tsx  index.ts
app/src/features/viewport/: Viewport.tsx  index.ts
app/src/lib/: cornerstone-core-shim.ts  protocol.ts  tauri-dicom-loader.ts  tauri.ts  utils.ts
app/src/lib/codecs/: charls-decodewasmjs.ts  libjpeg-turbo-8bit-decodewasmjs.ts  openjpeg-decodewasmjs.ts  openjph-wasmjs.ts
app/src/store/: index.ts  store.ts  types.ts
app/src/store/__tests__/: store.test.ts
scripts/: vendor-cornerstone.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  protocol.rs
src-tauri/src/commands/: dialog.rs  metadata.rs  mod.rs  read_dicom.rs  report.rs  scan.rs
src-tauri/src/dicom/: mod.rs  scanner.rs  types.rs
